--- a/index.html
+++ b/index.html
@@ -8,23 +8,11 @@
 </head>
 
 <body>
+    <div ng-if=""></div> <!-- Si esta autenticado -->
     <div class="container">
-        <div class="row" ng-controller="LoginController">
+        <div class="row">
             <div class="col-xs-12">
-                <div class="col-xs-2">Usuario:</div>
-                <div calss="col-xs-10">
-                    <input type="text" ng-model="user">
-                    <button ng-click="user=''">Reset</button> 
-                    <span> Hello {{ user }}</span>
-                </div>
-            </div>
-            <div class="col-xs-12">
-                <div class="col-xs-2">Password:</div>
-                <div calss="col-xs-10">
-                    <input type="text" ng-model="pass">
-                    <button ng-click="pass=''">Reset</button> 
-                    <span> Hello {{ pass }}</span>
-                </div>
+                <div ng-view></div>
             </div>
         </div>
     </div>
