Terminado login y logout con un servicio. Redirección en todos los casos

--- a/index.html
+++ b/index.html
@@ -3,12 +3,26 @@
 
 <head>
     <meta charset="UTF-8">
-    <title> {{ model.title }} </title>
+    <title> Movies Rent Babel</title>
     <link rel="stylesheet" type="text/css" href="dist/style.css">
 </head>
 
 <body>
-    <div ng-if=""></div> <!-- Si esta autenticado -->
+    <div ng-show="isAuth()">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="col-xs-8">
+                        <h1>MENU</h1>
+                    </div>
+                    <div class="col-xs-4">
+                        {{::model.user}}<button ng-click="logout()">Logout</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Si esta autenticado -->
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
