Creada las vistas necesarias de la aplicación con sus respectivos controladores. Además se usa una directiva para gestionar el listado de las peliculas en función del controlador. Modificado APlClient que dará servicio a los controladores.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="es" ng-app="movieRent">
+<html lang="es" ng-app="movieRent" ng-controller ="AppController">
 
 <head>
     <meta charset="UTF-8">
-    <title>Video Club</title>
+    <title>{{model.title}}</title>
     <link rel="stylesheet" href="dist/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
